src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCORE__Mailing_County__c</fullName>
        <inlineHelpText>County for Mailing Address</inlineHelpText>
        <label>Mailing County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Mailing_Last_Validated__c</fullName>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Other_County__c</fullName>
        <inlineHelpText>County of Other Contact Address</inlineHelpText>
        <label>Other County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Other_Last_Validated__c</fullName>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Management_Status__c</fullName>
        <description>&quot;Account Management Status&quot; with drop down field in the Contacto page layout section for Strategic Accounts.</description>
        <inlineHelpText>&quot;Account Management Status&quot; with drop down field in the Contacto page layout section for Strategic Accounts.</inlineHelpText>
        <label>Account Management Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Non-Supporter</fullName>
                </value>
                <value>
                    <fullName>Enemy</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field pulls Company Type field on Account to Contact</description>
        <formula>Text(Account.Type )</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_DCW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_Personnel.per_active</description>
        <label>Active (DCW)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Read only for all Users except System Administrators</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Administrative_Cost__c</fullName>
        <label>Administrative Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influence__c</fullName>
        <label>Buying Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to skip validation rules while uploading or updating records into Salesforce. After updating records please uncheck the field.</description>
        <inlineHelpText>Administrator use only. To know more please read field description.
Do not use this field anywhere including reports.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Division__c</fullName>
        <formula>Text(Owner.User_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_User_Department__c</fullName>
        <formula>Text( Owner.User_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCW_Personnel_Id__c</fullName>
        <externalId>true</externalId>
        <label>DCW Personnel Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTJobGUID__c</fullName>
        <description>Stores Daikin Tools JobGUID from  Order at the point of Contact Lookup &amp; Create so Record Usage = &quot;IE&quot; is not removed when a Rep deletes an IE Contact from one order, but they remain on other orders.</description>
        <inlineHelpText>Stores JobGUID from Daikin Tools Order at the point of Contact Lookup &amp; Create so Record Usage = &quot;IE&quot; is not removed when a Rep deletes an IE Contact from one order, but they remain on other orders.</inlineHelpText>
        <label>DT Job GUID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_they_have_enough_power_alignment__c</fullName>
        <label>Do they have enough power/alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eprise_Login_ID__c</fullName>
        <description>This is the Login ID that Reps and Employees use to log into the Sales Portal and Daikin Tools.</description>
        <label>Eprise Login ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Lead_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked as TRUE only if this record is created by Lead conversion.</description>
        <label>From Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created originally for the DSO side of the business</description>
        <inlineHelpText>Indicates this contact is a strategically important person with a high level of influence.</inlineHelpText>
        <label>High Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_Cost__c</fullName>
        <label>Hourly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>ID Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IE_Accessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IE User has performed their first login to the IE UI.</description>
        <inlineHelpText>IE User has performed their first login to the IE UI.</inlineHelpText>
        <label>IE Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the record pertains to the IE integration.  This is set on import of record from Daikin IE Back Office database.</description>
        <inlineHelpText>Flag to indicate the record pertains to the IE integration.  This is set on import of record from Daikin IE Back Office database.</inlineHelpText>
        <label>IE Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Daikin_Subscription_Role__c</fullName>
        <inlineHelpText>Select these roles if a Daikin Employee needs them for the Intelligent Equipment UI.</inlineHelpText>
        <label>IE Daikin Subscription Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EquipmentAdministrator</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <description>IE database unique record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>IE database unique record ID.</inlineHelpText>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IE User has been deactivated in the IE UI.</description>
        <inlineHelpText>IE User has been deactivated in the IE UI.</inlineHelpText>
        <label>IE Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <description>Status that gets set when attributes on the record are updated and therefore needs to be sent to the IE system.</description>
        <inlineHelpText>Pending =  Record needs to be sent to the IE system. 
Processed = Record was successfully received by IE system.
Error = Record was not successfully received by IE system.</inlineHelpText>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <description>IE system date for when the record was last updated in the IE database.</description>
        <inlineHelpText>IE system date for when the record was last updated in the IE database.</inlineHelpText>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IE_Username__c</fullName>
        <label>IE Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>dcw_Personnel.per_inactive_date</description>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Co_ordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lit_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_Personnel.per_lit_contact</description>
        <label>Lit Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingCountry_ISO_Code__c</fullName>
        <formula>Primary_Mailing_Address__r.Country_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState_ISO_Code__c</fullName>
        <formula>Primary_Mailing_Address__r.State_Province_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McQuayBiz__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_Personnel.per_biz_record</description>
        <label>McQuayBiz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nbr_of_Active_IE_Subscriptions__c</fullName>
        <description>If this number is greater than zero it can be used to send emails for &quot;Active Subscriptions&quot;</description>
        <inlineHelpText>Number of Active IE Subscriptions.</inlineHelpText>
        <label>Nbr of Active IE Subscriptions</label>
        <summaryFilterItems>
            <field>Contact_Subscription__c.Active_Subscription1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Subscription__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <formula>Number_of_Open_Activities__c  +  Number_of_Closed_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Activities__c</fullName>
        <label>Number of Closed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Activities__c</fullName>
        <label>Number of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCountry_ISO_Code__c</fullName>
        <formula>Physical_Address__r.Country_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState_ISO_Code__c</fullName>
        <formula>Physical_Address__r.State_Province_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical State ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_DCW__c</fullName>
        <description>dcw_Personnel.per_phone</description>
        <label>Phone (DCW)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Physical Address record for this Contact.</inlineHelpText>
        <label>Physical Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts (Physical)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Political_Status__c</fullName>
        <description>This field is created for Strategic Accounts</description>
        <inlineHelpText>Political Status</inlineHelpText>
        <label>Political Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Inner Circle</fullName>
                </value>
                <value>
                    <fullName>Outside the Political Structure</fullName>
                </value>
                <value>
                    <fullName>Political Structure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Primary Mailing Address record for this Contact.</inlineHelpText>
        <label>Primary Mailing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_Personnel.per_principal</description>
        <label>Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Reference_Number__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <formula>IF ( Rep_ID__c &lt;&gt; &quot;&quot;, &quot;DCW&quot;, &quot;SFDC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCW</fullName>
                </value>
                <value>
                    <fullName>DW</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>MKTG Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strategy__c</fullName>
        <description>This field is created for Strategic Accounts</description>
        <inlineHelpText>Relationship Strategy</inlineHelpText>
        <label>Relationship Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leverage</fullName>
                </value>
                <value>
                    <fullName>Motivate</fullName>
                </value>
                <value>
                    <fullName>Neutralize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Created for the DSOs</description>
        <inlineHelpText>This field indicates the current relationship this contact has with Daikin. This should be updated periodically as the relationship changes.</inlineHelpText>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Daikin Enemy</fullName>
                </value>
                <value>
                    <fullName>Non-Favorable</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Favorable</fullName>
                </value>
                <value>
                    <fullName>Daikin Loyal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_ID__c</fullName>
        <description>dcw_Personnel.per_id_no</description>
        <label>Rep ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>dcw_Personnel.per_roletype</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>Reason for changing the status from Active</description>
        <inlineHelpText>Reason for changing the status from Active</inlineHelpText>
        <label>Status Reason</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Applied_Systems_Toolbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing communication subscription as selected by contact at http://daikinapplied.com/subscribe.php</description>
        <label>Applied Systems Toolbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Job_Title__c</fullName>
        <description>Marketing communication subscription as selected by contact at http://daikinapplied.com/subscribe.php</description>
        <label>Subscription Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consulting Engineer</fullName>
                </value>
                <value>
                    <fullName>Contractor (Design Build)</fullName>
                </value>
                <value>
                    <fullName>Contractor (General)</fullName>
                </value>
                <value>
                    <fullName>Contractor (Mechanical)</fullName>
                </value>
                <value>
                    <fullName>Contractor (Service)</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Facility Manager/Engineer</fullName>
                </value>
                <value>
                    <fullName>School Planner/Administrator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_News_Company_Industry_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing communication subscription as selected by contact at http://daikinapplied.com/subscribe.php</description>
        <label>News: Company, Industry &amp; Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Revit_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing communication subscription as selected by contact at http://daikinapplied.com/subscribe.php</description>
        <label>Revit Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_eQUEST_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing communication subscription as selected by contact at http://daikinapplied.com/subscribe.php</description>
        <label>eQUEST Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_DCW__c</fullName>
        <description>dcw_Personnel.per_emp_title</description>
        <label>Title (DCW)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>DA Factory Service Tech</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Independent Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Service Tech</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <description>Originally added to capture Unique Keys from the SFDCIntegration staging DBA for the TRC Integration.</description>
        <label>Warehouse ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_our_Status_with_them__c</fullName>
        <label>What is our Status with them?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Non-Supporter</fullName>
                </value>
                <value>
                    <fullName>Enemy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_their_Political_Status__c</fullName>
        <label>What is their Political Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inner Circle</fullName>
                </value>
                <value>
                    <fullName>In Political Structure</fullName>
                </value>
                <value>
                    <fullName>Outside Political Structure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Colombia_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>Contact_Owner_User_Department__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>Colombia</value>
        </filters>
        <label>Colombia Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Colombia_Sales_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAAL_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAAL</value>
        </filters>
        <label>DAAL Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAFL_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.PHONE2</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAFL</value>
        </filters>
        <label>DAFL Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>South_Florida</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAGA_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.PHONE2</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAGA</value>
        </filters>
        <label>DAGA Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAGA</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>